--- a/SSISPackageAutomation/SSISPackageAutomation/App.config
+++ b/SSISPackageAutomation/SSISPackageAutomation/App.config
@@ -3,4 +3,9 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
     </startup>
+  <configuration>
+    <appSettings>
+      <add key="ExcelConn" value=""></add>
+    </appSettings>
+  </configuration>
 </configuration>
