--- a/SSISPackageAutomation/SSISPackageAutomation/SSISPackageAutomation.csproj
+++ b/SSISPackageAutomation/SSISPackageAutomation/SSISPackageAutomation.csproj
@@ -67,6 +67,7 @@
     <Compile Include="SSISConnection.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="WorkingExample.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
